--- a/apps/smallapp/submit.qm.trashed/index.html
+++ b/apps/smallapp/submit.qm.trashed/index.html
@@ -23,7 +23,7 @@ return Number(str);
 }
 return testData(new Date().getTime());
 }
-addEventListened("load",function(){subid.innerHTML=getrdmid()})
+addEventListener("load",function(){subid.innerHTML=getrdmid()})
 </script>
 </head>
 <body>
@@ -35,7 +35,7 @@ addEventListened("load",function(){subid.innerHTML=getrdmid()})
 <a href="javascript:qr.hidden=qr2.hidden=0;">提交签名</a>
 <div id=qr style="text-align:center;z-index:5;background-color:#fff;position:absolute;transform:
 translate(-50%,-50%);left:50%;top:50%;" hidden>
-扫描二维码即可签名(需在微信中打开)<br><img src="qrcode.png.PNG"><br>
+扫描二维码即可签名(需在微信中打开)<br><img src="qrcode.png.png"><br>
 <a href="javascript:qr.hidden=qr2.hidden=1">关闭</a></div>
 </div> <span id=qr2 hidden style=
 "position:absolute;z-index:2;width:100%;height:100%;top:0;left:0;background-color:rgba(170,170,170,0.3)"></span>
