--- a/apps/smallapp/index.html
+++ b/apps/smallapp/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>HTML5 Applications</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Online HTML5 applications">
     <style>
         a, button, input[type="checkbox"] {
             cursor: pointer;
