--- a/apps/smallapp/happy-chicken/index.html
+++ b/apps/smallapp/happy-chicken/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>快乐小鸡</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="快乐小鸡">
     <script>
         function getRandom(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
